--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский»</title>
   <meta name="description" content="Лучший Барбершоп в Санкт-Петербурге">
+  <!-- Links -->
+  <link rel="StyleSheet" href="css/style.css" type="text/css">
+  <link rel="icon" href="img/favicon.ico" type="image/ico">
+  <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header class="main-header">
@@ -19,7 +23,7 @@
         </ul>
       </nav>
       <div class="user-block">
-        <a href="#" class="login"></a>
+        <a href="#" class="login">Вход</a>
       </div>
     </div>
   </header>
@@ -42,7 +46,7 @@
         <p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
       </div>
     </section>
-    <section class="index-content">
+    <section class="index-content clearfix">
       <div class="content-column-left">
         <h2 class="content-column-title">Новости</h2>
         <ul class="news-preview">
@@ -61,7 +65,7 @@
         <h2 class="content-column-title">Фотогалерея</h2>
         <div class="gallery">
           <figure class="gallery-content">
-            <img src="img/photo-1.jpg" width="286" height="164" alt="Фотография внутри барбершопа">
+            <img src="img/content-gallery-photo-1.jpg" width="286" height="164" alt="Фотография внутри барбершопа">
           </figure>
           <button class="btn gallery-prev">Назад</button>
           <button class="btn galery-next">Вперед</button>
