--- a/shop.html
+++ b/shop.html
@@ -1,1 +1,155 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Барбершоп «Бородинский»</title>
+  <meta name="description" content="Лучший Барбершоп в Санкт-Петербурге">
+  <meta name="author" content="sklart.ru">
+  <meta name="description" content="Предоставляем услуги стрижки, подбираем аксессуары для ухода за волосами и бородой">
+  <meta name="keywords" content="парикмахерская, стрижка, уход, аксессуары, волосы, парихмахерская, борода">
+  <!-- Links -->
+  <link rel="StyleSheet" href="css/style.css" type="text/css">
+  <link rel="icon" href="img/favicon.ico" type="image/ico">
+  <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
+</head>
+<body>
+  <header class="main-header">
+    <div class="container clearfix">
+      <nav class="main-navigation">
+        <ul>
+          <li class="active"><a href="#">Главная</a></li>
+          <li><a href="#">Информация</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="price.html">Прайс-лист</a></li>
+          <li><a href="shop.html">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
 
+      <div class="user-block">
+        <a href="#" class="login">Вход</a>
+      </div>
+    </div>
+  </header>
+
+  <main class="shop-main">
+    <div class="container">
+      <h1>Barbershop Borodinski - Магазин</h1>
+      <div class="breadcrumbs">
+        <a href="#">Главная</a>
+        <a href="#">Магазин</a>
+        <a href="#">Средства для ухода</a>
+      </div>
+
+      <aside>
+        <h2>Производители</h2>
+        <a href="#">Baxter of California</a>
+        <a href="#">Mr Natty</a>
+        <a href="#">Suavecito</a>
+        <a href="#">Malin+Goetz</a>
+        <a href="#">Murray's</a>
+        <a href="#">American Crew</a>
+        <h2>Группы товаров</h2>
+        <a href="#">Бритвенные принадлежности</a>
+        <a href="#">Средства для ухода</a>
+        <a href="#">Аксессуары</a>
+      </aside>
+
+      <section>
+        <article>
+          <figure>
+            <img src="content-catalog-item-1.jpg" alt="Набор для путешествий">
+          </figure>
+          <h3>Baxter of California</h3>
+          <p>Набор для путешествий</p>
+          <div class="item-price">
+            <p>2 900 руб.</p>
+            <a class="btn" href="#">Купить</a>
+          </div>
+        </article>
+        <article>
+          <figure>
+            <img src="content-catalog-item-2.jpg" alt="Увлажняющий кондиционер">
+          </figure>
+          <h3>Baxter of California</h3>
+          <p>Увлажняющий кондиционер</p>
+          <div class="item-price">
+            <p>750 руб.</p>
+            <a class="btn" href="#">Купить</a>
+          </div>
+        </article>
+        <article>
+          <figure>
+            <img src="content-catalog-item-3.jpg" alt="Гель для волос">
+          </figure>
+          <h3>SAUVECITO</h3>
+          <p>Гель для волос</p>
+          <div class="item-price">
+            <p>290 руб.</p>
+            <a class="btn" href="#">Купить</a>
+          </div>
+        </article>
+        <article>
+          <figure>
+            <img src="content-catalog-item-4.jpg" alt="Глина для укладки волос">
+          </figure>
+          <h3>American Crew</h3>
+          <p>Глина для укладки волос</p>
+          <div class="item-price">
+            <p>300 руб.</p>
+            <a class="btn" href="#">Купить</a>
+          </div>
+        </article>
+        <article>
+          <figure>
+            <img src="content-catalog-item-5.jpg" alt="Гель для волос">
+          </figure>
+          <h3>American Crew</h3>
+          <p>Гель для волос</p>
+          <div class="item-price">
+            <p>2 900 руб.</p>
+            <a class="btn" href="#">Купить</a>
+          </div>
+        </article>
+        <article>
+          <figure>
+            <img src="content-catalog-item-6.jpg" alt="Набор для бритья">
+          </figure>
+          <h3>Baxter of California</h3>
+          <p>Набор для бритья</p>
+          <div class="item-price">
+            <p>3 900 руб.</p>
+            <a class="btn" href="#">Купить</a>
+          </div>
+        </article>
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+      </section>
+    </div>
+  </main>
+
+  <footer class="main-footer">
+    <div class="container clearfix">
+      <section class="footer-contacts">
+        Барбершоп «Бородинский»<br>
+        Адрес: г.Москва, ул. Собаки Павлова, д. 13<br>
+        Телефон: +7 (495) 666-02-666
+      </section>
+
+      <section class="footer-social">
+        <p>Давайте дружить!</p>
+        <a href="#" class="social-btn social-btn-vk"></a>
+        <a href="#" class="social-btn social-btn-fb"></a>
+        <a href="#" class="social-btn social-btn-inst"></a>
+      </section>
+
+      <address class="footer-copyright">
+        <p>Дизайн сайта:</p>
+        <a href="//glukhanko.ru" class="btn">glukhanko.ru</a>
+      </address>
+    </div>
+  </footer>
+</body>
+</html>
