--- a/item.html
+++ b/item.html
@@ -17,11 +17,11 @@
     <div class="container clearfix">
       <nav class="main-navigation">
         <ul>
-          <li class="active"><a href="#">Главная</a></li>
+          <li><a href="index.html">Главная</a></li>
           <li><a href="#">Информация</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="price.html">Прайс-лист</a></li>
-          <li><a href="shop.html">Магазин</a></li>
+          <li class="current-page"><a href="shop.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
@@ -35,8 +35,8 @@
   <main class="item-main">
     <div class="container">
       <div class="breadcrumbs">
-        <a href="#">Главная</a>
-        <a href="#">Магазин</a>
+        <a href="index.html">Главная</a>
+        <a href="shop.html">Магазин</a>
         <a href="#">Средства для ухода</a>
         <a href="#">Baxter of California</a>
       </div>
@@ -49,8 +49,8 @@
       </section>
 
       <section class="item-description">
-        <h1 class="item-header">Набор для путешествий</h1>
-        <h2>Baxter of California</h2>
+        <h2 class="item-header">Набор для путешествий</h2>
+        <h3>Baxter of California</h3>
         <div class="item-price">
           <p>2 900 руб.</p>
           <a class="btn" href="#">Купить</a>
@@ -84,7 +84,7 @@
         <a href="#" class="social-btn social-btn-fb"></a>
         <a href="#" class="social-btn social-btn-inst"></a>
       </section>
-      
+
       <address class="footer-copyright">
         <p>Дизайн сайта:</p>
         <a href="//glukhanko.ru" class="btn">glukhanko.ru</a>
