--- a/shop.html
+++ b/shop.html
@@ -17,11 +17,11 @@
     <div class="container clearfix">
       <nav class="main-navigation">
         <ul>
-          <li class="active"><a href="#">Главная</a></li>
+          <li><a href="index.html">Главная</a></li>
           <li><a href="#">Информация</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="price.html">Прайс-лист</a></li>
-          <li><a href="shop.html">Магазин</a></li>
+          <li class="current-page"><a href="shop.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
@@ -34,22 +34,22 @@
 
   <main class="shop-main">
     <div class="container">
-      <h1>Barbershop Borodinski - Магазин</h1>
+      <h2>Barbershop Borodinski - Магазин</h2>
       <div class="breadcrumbs">
-        <a href="#">Главная</a>
-        <a href="#">Магазин</a>
+        <a href="index.html">Главная</a>
+        <a href="shop.html">Магазин</a>
         <a href="#">Средства для ухода</a>
       </div>
 
       <aside>
-        <h2>Производители</h2>
+        <h3>Производители</h3>
         <a href="#">Baxter of California</a>
         <a href="#">Mr Natty</a>
         <a href="#">Suavecito</a>
         <a href="#">Malin+Goetz</a>
         <a href="#">Murray's</a>
         <a href="#">American Crew</a>
-        <h2>Группы товаров</h2>
+        <h3>Группы товаров</h3>
         <a href="#">Бритвенные принадлежности</a>
         <a href="#">Средства для ухода</a>
         <a href="#">Аксессуары</a>
@@ -60,7 +60,7 @@
           <figure>
             <img src="content-catalog-item-1.jpg" alt="Набор для путешествий">
           </figure>
-          <h3>Baxter of California</h3>
+          <p>Baxter of California</p>
           <p>Набор для путешествий</p>
           <div class="item-price">
             <p>2 900 руб.</p>
@@ -71,7 +71,7 @@
           <figure>
             <img src="content-catalog-item-2.jpg" alt="Увлажняющий кондиционер">
           </figure>
-          <h3>Baxter of California</h3>
+          <p>Baxter of California</p>
           <p>Увлажняющий кондиционер</p>
           <div class="item-price">
             <p>750 руб.</p>
@@ -82,7 +82,7 @@
           <figure>
             <img src="content-catalog-item-3.jpg" alt="Гель для волос">
           </figure>
-          <h3>SAUVECITO</h3>
+          <p>SAUVECITO</p>
           <p>Гель для волос</p>
           <div class="item-price">
             <p>290 руб.</p>
@@ -93,7 +93,7 @@
           <figure>
             <img src="content-catalog-item-4.jpg" alt="Глина для укладки волос">
           </figure>
-          <h3>American Crew</h3>
+          <p>American Crew</p>
           <p>Глина для укладки волос</p>
           <div class="item-price">
             <p>300 руб.</p>
@@ -104,7 +104,7 @@
           <figure>
             <img src="content-catalog-item-5.jpg" alt="Гель для волос">
           </figure>
-          <h3>American Crew</h3>
+          <p>American Crew</p>
           <p>Гель для волос</p>
           <div class="item-price">
             <p>2 900 руб.</p>
@@ -115,7 +115,7 @@
           <figure>
             <img src="content-catalog-item-6.jpg" alt="Набор для бритья">
           </figure>
-          <h3>Baxter of California</h3>
+          <p>Baxter of California</p>
           <p>Набор для бритья</p>
           <div class="item-price">
             <p>3 900 руб.</p>
