--- a/price.html
+++ b/price.html
@@ -17,15 +17,15 @@
     <div class="container clearfix">
       <nav class="main-navigation">
         <ul>
-          <li class="active"><a href="#">Главная</a></li>
+          <li><a href="index.html">Главная</a></li>
           <li><a href="#">Информация</a></li>
           <li><a href="#">Новости</a></li>
-          <li><a href="price.html">Прайс-лист</a></li>
+          <li class="current-page"><a href="price.html">Прайс-лист</a></li>
           <li><a href="shop.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
-      
+
       <div class="user-block">
         <a href="#" class="login">Вход</a>
       </div>
@@ -34,10 +34,10 @@
 
   <main class="price-main">
     <div class="container">
-      <h1>Barbershop Borodinski - Прайс-лист</h1>
+      <h2>Barbershop Borodinski - Прайс-лист</h2>
       <div class="breadcrumbs">
-        <a href="#">Главная</a>
-        <a href="#">Прайс-лист</a>
+        <a href="index.html">Главная</a>
+        <a href="price.html">Прайс-лист</a>
       </div>
 
       <p class="price-jumbotitle">Истинно мужская классика</p>
