Added small part of index content style

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
       </nav>
       <div class="user-block">
-        <a href="#" class="login">Вход</a>
+        <a href="#loginForm" class="login">Вход</a>
       </div>
     </div>
   </header>
@@ -37,18 +37,19 @@
     </div>
     <section class="features clearfix">
       <div class="features-item">
-        <div class="features-title">Дорого</div>
+        <h2 class="features-title">Быстро</h2>
         <p>Мы делаем свою работу быстро! Два часа пролетят незаметно, и вы - счастливый обладатель стильной стрижки-минутки!</p>
       </div>
       <div class="features-item">
-        <div class="features-title">Быстро</div>
+        <h2 class="features-title">Круто</h2>
         <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае, внешне.</p>
       </div>
       <div class="features-item">
-        <div class="features-title">Круто</div>
+        <h2 class="features-title">Дорого</h2>
         <p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
       </div>
     </section>
+
     <section class="index-content clearfix">
       <div class="content-column-left">
         <h2 class="content-column-title">Новости</h2>
@@ -71,14 +72,14 @@
             <img src="img/content-gallery-photo-1.jpg" width="286" height="164" alt="Фотография внутри барбершопа">
           </figure>
           <button class="btn gallery-prev">Назад</button>
-          <button class="btn galery-next">Вперед</button>
+          <button class="btn gallery-next">Вперед</button>
         </div>
       </div>
     </section>
     <section class="index-content clearfix">
       <div class="content-column-left">
         <div class="main-contacts">
-          <h2 class="content-column-title">Контактная информация</h2>
+          <h2 class="content-column-title">Контакты</h2>
           <p>
             Барбершоп «Бородинский»<br>
             Адрес: г.Москва, ул. Собаки Павлова, д. 13<br>
@@ -130,7 +131,7 @@
   </footer>
 
   <!-- Login window -->
-  <form class="login-form" action="/login" method="post">
+  <form class="login-form" id="loginForm" action="/login" method="post">
     <h2>Личный кабинет</h2>
     <p>Введите, пожалуйста, свой логин и пароль:</p>
     <input type="text" name="login" required>
