--- a/price.html
+++ b/price.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="img/favicon.ico" type="image/ico">
   <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body class="inner-page">
   <header class="main-header">
     <div class="container clearfix">
       <nav class="main-navigation">
