Finished styling of the main page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="features-item">
         <h2 class="features-title">Круто</h2>
-        <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае, внешне.</p>
+        <p>Забудьте, как вы стриглись раньше.<br> Мы сделаем из вас звезду футбола или кино! Во всяком случае, внешне.</p>
       </div>
       <div class="features-item">
         <h2 class="features-title">Дорого</h2>
@@ -91,16 +91,16 @@
             сб - вс: с 10:00 до 19:00
           </p>
         </div>
-        <a href="#" class="btn">Как проехать</a>
-        <a href="#" class="btn">Обратная связь</a>
+        <a href="#" class="btn contacts-navigate-btn">Как проехать</a>
+        <a href="#" class="btn contacts-feedback-btn">Обратная связь</a>
       </div>
       <div class="content-column-right">
         <div class="appointment-form">
           <h2 class="content-column-title">Записаться</h2>
           <p>Укажите желаемую дату и время, и мы свяжемся с вами для подтверждения брони</p>
           <form action="/echo" method="post">
-            <input type="date" name="date" value="">
-            <input type="time" name="time" value="">
+            <input type="date" name="date" value="" placeholder="Дата">
+            <input type="time" name="time" value="" placeholder="Время">
             <input type="text" name="name" value="" placeholder="Ваше имя">
             <input type="tel" name="phone" value="" placeholder="Телефон">
             <button class="btn" type="submit">Отправить</button>
@@ -112,20 +112,20 @@
 
   <footer class="main-footer">
     <div class="container clearfix">
-      <section class="footer-contacts">
+      <section class="main-footer-column footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г.Москва, ул. Собаки Павлова, д. 13<br>
         Телефон: +7 (495) 666-02-666
       </section>
-      <section class="footer-social">
+      <section class="main-footer-column footer-social">
         <p>Давайте дружить!</p>
         <a href="#" class="social-btn social-btn-vk"></a>
         <a href="#" class="social-btn social-btn-fb"></a>
         <a href="#" class="social-btn social-btn-inst"></a>
       </section>
-      <address class="footer-copyright">
+      <address class="main-footer-column footer-copyright">
         <p>Дизайн сайта:</p>
-        <a href="//glukhanko.ru" class="btn">glukhanko.ru</a>
+        <a href="//glukhanko.ru" class="btn footer-author-btn">glukhanko.ru</a>
       </address>
     </div>
   </footer>
