--- a/price.html
+++ b/price.html
@@ -8,7 +8,8 @@
   <meta name="description" content="Предоставляем услуги стрижки, подбираем аксессуары для ухода за волосами и бородой">
   <meta name="keywords" content="парикмахерская, стрижка, уход, аксессуары, волосы, парихмахерская, борода">
   <!-- Links -->
-  <link rel="StyleSheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/normalize.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="icon" href="img/favicon.ico" type="image/ico">
   <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
@@ -17,12 +18,12 @@
     <div class="container clearfix">
       <nav class="main-navigation">
         <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Информация</a></li>
-          <li><a href="#">Новости</a></li>
-          <li class="current-page"><a href="price.html">Прайс-лист</a></li>
-          <li><a href="shop.html">Магазин</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="index.html">Главная</a>
+          <li><a href="#">Информация</a>
+          <li><a href="#">Новости</a>
+          <li class="current-page"><a href="price.html">Прайс-лист</a>
+          <li><a href="shop.html">Магазин</a>
+          <li><a href="#">Контакты</a>
         </ul>
       </nav>
 
