--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Предоставляем услуги стрижки, подбираем аксессуары для ухода за волосами и бородой">
   <meta name="keywords" content="Парикмахерская, стрижка, уход, аксессуары, волосы, парихмахерская, борода">
   <!-- Links -->
+  <link rel="stylesheet" href="css/normalize.css" type="text/css">
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="icon" href="img/favicon.ico" type="image/ico">
   <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
@@ -26,7 +27,7 @@
         </ul>
       </nav>
       <div class="user-block">
-        <a href="#loginForm" class="login">Вход</a>
+        <a href="#" class="login">Вход</a>
       </div>
     </div>
   </header>
@@ -39,12 +40,12 @@
       <div class="features-item">
         <h2 class="features-title">Быстро</h2>
         <p>Мы делаем свою работу быстро! Два часа пролетят незаметно, и вы - счастливый обладатель стильной стрижки-минутки!</p>
-      </div>
-      <div class="features-item">
+      </div><!--
+   --><div class="features-item">
         <h2 class="features-title">Круто</h2>
         <p>Забудьте, как вы стриглись раньше.<br> Мы сделаем из вас звезду футбола или кино! Во всяком случае, внешне.</p>
-      </div>
-      <div class="features-item">
+      </div><!--
+   --><div class="features-item">
         <h2 class="features-title">Дорого</h2>
         <p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
       </div>
@@ -71,7 +72,7 @@
           <figure class="gallery-content">
             <img src="img/content-gallery-photo-1.jpg" width="286" height="164" alt="Фотография внутри барбершопа">
           </figure>
-          <button class="btn gallery-prev">Назад</button>
+          <button class="btn gallery-prev" disabled>Назад</button>
           <button class="btn gallery-next">Вперед</button>
         </div>
       </div>
@@ -95,7 +96,7 @@
         <a href="#" class="btn contacts-feedback-btn">Обратная связь</a>
       </div>
       <div class="content-column-right">
-        <div class="appointment-form">
+        <div class="appointment-form clearfix">
           <h2 class="content-column-title">Записаться</h2>
           <p>Укажите желаемую дату и время, и мы свяжемся с вами для подтверждения брони</p>
           <form action="/echo" method="post">
@@ -132,17 +133,19 @@
 
   <!-- Login window -->
   <form class="login-form" id="loginForm" action="/login" method="post">
-    <h2>Личный кабинет</h2>
+    <h2 class="login-header">Личный кабинет</h2>
     <p>Введите, пожалуйста, свой логин и пароль:</p>
-    <input type="text" name="login" required>
-    <input type="password" name="password" required>
-    <div>
-      <input type="checkbox" name="remember" checked>
+    <input type="text" name="login" placeholder="Логин" required>
+    <input type="password" name="password" placeholder="Пароль" required>
+    <div class="remember-forget-block clearfix">
+      <!-- <input type="checkbox" name="remember" checked> -->
       <label for="remember">Запомните меня</label>
-      <a href="#">Я забыл пароль!</a>
+      <a href="#" class="forget-pass">Я забыл пароль!</a>
     </div>
     <button class="btn" type="submit">Войти</button>
+    <a href="#" class="login-form-close"></a>
   </form>
 
+  <script src="js/script.js"></script>
 </body>
 </html>
