Added style for price page

--- a/item.html
+++ b/item.html
@@ -73,22 +73,20 @@
 
   <footer class="main-footer">
     <div class="container clearfix">
-      <section class="footer-contacts">
+      <section class="main-footer-column footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г.Москва, ул. Собаки Павлова, д. 13<br>
         Телефон: +7 (495) 666-02-666
       </section>
-
-      <section class="footer-social">
+      <section class="main-footer-column footer-social">
         <p>Давайте дружить!</p>
         <a href="#" class="social-btn social-btn-vk"></a>
         <a href="#" class="social-btn social-btn-fb"></a>
         <a href="#" class="social-btn social-btn-inst"></a>
       </section>
-
-      <address class="footer-copyright">
+      <address class="main-footer-column footer-copyright">
         <p>Дизайн сайта:</p>
-        <a href="//glukhanko.ru" class="btn">glukhanko.ru</a>
+        <a href="//glukhanko.ru" class="btn footer-author-btn">glukhanko.ru</a>
       </address>
     </div>
   </footer>
