--- a/price.html
+++ b/price.html
@@ -35,67 +35,76 @@
 
   <main class="price-main">
     <div class="container">
-      <h2>Barbershop Borodinski - Прайс-лист</h2>
-      <div class="breadcrumbs">
-        <a href="index.html">Главная</a>
-        <a href="price.html">Прайс-лист</a>
+
+      <div class="inner-page-title">
+        <h2>Barbershop Borodinski - Прайс-лист</h2>
+        <ul class="breadcrumbs">
+          <li><a href="index.html">Главная</a></li>
+          <li class="current"><a href="price.html">Прайс-лист</a></li>
+        </ul>
       </div>
 
-      <p class="price-jumbotitle">Истинно мужская классика</p>
-
-      <section>
-        <h2>Мы используем только<br> лучшие средства</h2>
-        <ul>
-          <li>Baxter of California</li>
-          <li>Mr Natty</li>
-          <li>Suavecito</li>
-          <li>Malin+Goetz</li>
-        </ul>
-      </section>
-      <section>
-        <h2>Цены на услуги<br> наших мастеров</h2>
-        <table>
-          <tr>
-            <td>Стрижка</td>
-            <td>1500 р.</td>
-          </tr>
-          <tr>
-            <td>Стрижка бороды</td>
-            <td>500 р.</td>
-          </tr>
-          <tr>
-            <td>Накрутка усов</td>
-            <td>350 р.</td>
-          </tr>
-        </table>
-      </section>
-      <section>
-        <h2>Несколько слов о нас</h2>
-        <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
-        <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв, здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
-      </section>
-
+      <div class="inner-content">
+        <div class="big-heading">
+          <span>Истинно мужская классика</span>
+        </div>
+        <div class="inner-content-columns clearfix">
+          <div class="inner-content-column-left">
+              <h3>Мы используем только<br> лучшие средства</h3>
+              <ul class="custom-list-1">
+                <li>Baxter of California</li>
+                <li>Mr Natty</li>
+                <li>Suavecito</li>
+                <li>Malin+Goetz</li>
+              </ul>
+          </div>
+          <div class="inner-content-column-right">
+              <h3>Цены на услуги<br> наших мастеров</h3>
+              <table class="prices-table">
+                <tr>
+                  <td>Стрижка</td>
+                  <td>1500 р.</td>
+                </tr>
+                <tr>
+                  <td>Стрижка бороды</td>
+                  <td>500 р.</td>
+                </tr>
+                <tr>
+                  <td>Накрутка усов</td>
+                  <td>350 р.</td>
+                </tr>
+              </table>
+          </div>
+        </div>
+        <div class="inner-content-columns clearfix">
+          <h3>Несколько слов о нас</h3>
+          <div class="inner-content-column-left">
+            <p class="short-text">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+          </div>
+          <div class="inner-content-column-right">
+            <p class="short-text">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв, здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 
   <footer class="main-footer">
     <div class="container clearfix">
-      <section class="footer-contacts">
+      <section class="main-footer-column footer-contacts">
         Барбершоп «Бородинский»<br>
         Адрес: г.Москва, ул. Собаки Павлова, д. 13<br>
         Телефон: +7 (495) 666-02-666
       </section>
-
-      <section class="footer-social">
+      <section class="main-footer-column footer-social">
         <p>Давайте дружить!</p>
         <a href="#" class="social-btn social-btn-vk"></a>
         <a href="#" class="social-btn social-btn-fb"></a>
         <a href="#" class="social-btn social-btn-inst"></a>
       </section>
-
-      <address class="footer-copyright">
+      <address class="main-footer-column footer-copyright">
         <p>Дизайн сайта:</p>
-        <a href="//glukhanko.ru" class="btn">glukhanko.ru</a>
+        <a href="//glukhanko.ru" class="btn footer-author-btn">glukhanko.ru</a>
       </address>
     </div>
   </footer>
