Added style for modal login window

--- a/price.html
+++ b/price.html
@@ -37,7 +37,7 @@
     <div class="container">
 
       <div class="inner-page-title">
-        <h2>Barbershop Borodinski - Прайс-лист</h2>
+        <h2>Barbershop Borodinski &#8212; Прайс-лист</h2>
         <ul class="breadcrumbs">
           <li><a href="index.html">Главная</a></li>
           <li class="current"><a href="price.html">Прайс-лист</a></li>
@@ -50,7 +50,7 @@
         </div>
         <div class="inner-content-columns clearfix">
           <div class="inner-content-column-left">
-              <h3>Мы используем только<br> лучшие средства</h3>
+              <h3>Мы используем только<br> лучшие средства:</h3>
               <ul class="custom-list-1">
                 <li>Baxter of California</li>
                 <li>Mr Natty</li>
@@ -59,7 +59,7 @@
               </ul>
           </div>
           <div class="inner-content-column-right">
-              <h3>Цены на услуги<br> наших мастеров</h3>
+              <h3>Цены на услуги<br> наших мастеров:</h3>
               <table class="prices-table">
                 <tr>
                   <td>Стрижка</td>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="inner-content-columns clearfix">
-          <h3>Несколько слов о нас</h3>
+          <h3>Несколько слов о нас:</h3>
           <div class="inner-content-column-left">
             <p class="short-text">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
           </div>
