--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
   </footer>
 
   <!-- Login window -->
-  <form class="login-form" id="loginForm" action="/login" method="post">
-    <h2 class="login-header">Личный кабинет</h2>
+  <div class="modal-login">
+    <a href="#" class="modal-login-close"></a>
+    <h2 class="modal-login-title">Личный кабинет</h2>
     <p>Введите, пожалуйста, свой логин и пароль:</p>
-    <input type="text" name="login" placeholder="Логин" required>
-    <input type="password" name="password" placeholder="Пароль" required>
-    <div class="remember-forget-block clearfix">
-      <!-- <input type="checkbox" name="remember" checked> -->
-      <label for="remember">Запомните меня</label>
-      <a href="#" class="forget-pass">Я забыл пароль!</a>
-    </div>
-    <button class="btn" type="submit">Войти</button>
-    <a href="#" class="login-form-close"></a>
-  </form>
+    <form class="login-form" id="loginForm" action="/login" method="post">
+      <input type="text" class="icon-login" name="login" placeholder="Логин" required>
+      <input type="password" class="icon-password" name="password" placeholder="Пароль" required>
+      <input type="checkbox" name="remember" id="remember-me" checked>
+      <label for="remember-me">Запомните меня</label>
+      <a href="#" class="restore">Я забыл пароль!</a>
+      <button class="btn btn-submit" type="submit">Войти</button>
+    </form>
+  </div>
 
   <script src="js/script.js"></script>
 </body>
